--- a/Frontend/ShoppingCart-Ui/src/app/components/shopping-cart/cart/cart.component.html
+++ b/Frontend/ShoppingCart-Ui/src/app/components/shopping-cart/cart/cart.component.html
@@ -21,9 +21,9 @@
                 <tr>
                     <th >ProductInfo</th>
                     <th class="text-center">Quantity</th>
-                    <th class="text-center">Subtotal</th>
-                  
-                    <th class="text-center"><a class="btn btn-sm btn-outline-danger" href="#">Clear Cart</a></th>
+                    <th class="text-center">Price/Unit</th>
+                    <th class="text-center">SubTotal</th>
+                    <th class="text-center"><a class="btn btn-sm btn-outline-danger"  (click)="deleteEntireCart()">Clear Cart</a></th>
                 </tr>
             </thead>
            
@@ -50,6 +50,7 @@
                         </div>
                     </td>
                     <td class="text-center text-lg text-medium">{{items.price}}</td>
+                    <td class="text-center text-lg text-medium">{{items.price*items.quantity}}</td>
                     
                    <td class="text-center"><a class="remove-from-cart"  (click)="deleteItem(i)"  data-toggle="tooltip" title="" data-original-title="Remove item"><i class="fa fa-trash"></i></a></td>
                        
