--- a/Frontend/ShoppingCart-Ui/src/app/components/shared/nav/nav.component.html
+++ b/Frontend/ShoppingCart-Ui/src/app/components/shared/nav/nav.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-info border-bottom shadow-sm">
   <h5 class="my-0 mr-md-auto font-weight-normal">
     <app-header></app-header>
   </h5>
@@ -7,7 +7,7 @@
     <a class="p-2 text-dark" href="#">Support</a>
     <!-- <a class="p-2 text-dark" *ngIf="customer" [routerLink]="['/cart']">Cart</a> -->
     <a class="p-2 text-dark" *ngIf="customer"  href="cart/{{id}}">Cart</a>
-     <a class="p-2 text-dark" *ngIf="merchant" [routerLink]="['/cart']">Manage Products</a> 
+     <a class="p-2 text-dark" *ngIf="merchant" [routerLink]="['/manage Stock']">Add Products</a> 
   </nav>
   <a class="btn btn-primary" *ngIf="!loggedIn" [routerLink]="['/register']">Sign up</a>
   <a class="btn btn-outline-secondary" *ngIf="!loggedIn" [routerLink]="['/login']">Login</a>
