--- a/Frontend/ShoppingCart-Ui/src/app/components/shopping-cart/get-product/get-product.component.html
+++ b/Frontend/ShoppingCart-Ui/src/app/components/shopping-cart/get-product/get-product.component.html
@@ -1,52 +1,37 @@
-<div class="container bootdey">
-    <div class="col-lg-12">
+<link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <br>
+    <div class="container bootdey">
+<div class="col-md-12">
     <section class="panel">
           <div class="panel-body">
-              <div class="col-lg-6">
+              <div class="col-md-6">
                   <div class="pro-img-details">
-                      <img src="https://via.placeholder.com/550x380/FFB6C1/000000" alt="">
+                      <img src="{{product.image1}}" alt="">
                   </div>
-                  <!-- <div class="pro-img-list">
-                      <a href="#">
-                          <img src="https://via.placeholder.com/115x100/87CEFA/000000" alt="">
-                      </a>
-                      <a href="#">
-                          <img src="https://via.placeholder.com/115x100/FF7F50/000000" alt="">
-                      </a>
-                      <a href="#">
-                          <img src="https://via.placeholder.com/115x100/20B2AA/000000" alt="">
-                      </a>
-                      <a href="#">
-                          <img src="https://via.placeholder.com/120x100/20B2AA/000000" alt="">
-                      </a>
-                  </div> -->
+                 
               </div>
-              <div class="row-md-6">
+              <br>
+              <br>
+              <div class="col-md-6">
                   <h4 class="pro-d-title">
                       <a href="#" class="">
-                          Leopard Shirt Dress
+                         {{product.productName}}
                       </a>
                   </h4>
                   <p>
-                      Praesent ac condimentum felis. Nulla at nisl orci, at dignissim dolor, The best product descriptions address your ideal buyer directly and personally. The best product descriptions address your ideal buyer directly and personally.
+                      {{product.description}}
                   </p>
                   <div class="product_meta">
-                      <span class="posted_in"> <strong>Categories:</strong> <a rel="tag" href="#">Jackets</a>, <a rel="tag" href="#">Men</a>, <a rel="tag" href="#">Shirts</a>, <a rel="tag" href="#">T-shirt</a>.</span>
-                      <span class="tagged_as"><strong>Tags:</strong> <a rel="tag" href="#">mens</a>, <a rel="tag" href="#">womens</a>.</span>
+                      <span class="posted_in"> <strong>Category:</strong> {{product.category}}</span>
+                      <span class="tagged_as"><strong>Product Type:</strong> {{product.productType}}.</span>
                   </div>
-                  <div class="m-bot15"> <strong>Price : </strong> <span class="amount-old">$544</span>  <span class="pro-price"> $300.00</span></div>
-                  <div class="form-group">
-                      <label>Quantity</label>
-                      <input type="quantiy" placeholder="1" class="form-control quantity">
-                  </div>
-                  <p>
+                  <div class="m-bot15"> <strong>Price : </strong>   <span class="pro-price">₹{{product.price}} </span></div>
+                  
+                  <!-- <p>
                       <button class="btn btn-round btn-danger" type="button"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
-                  </p>
+                  </p> -->
               </div>
           </div>
       </section>
       </div>
-      </div>
-  
-    
- 
+    </div>
