--- a/Frontend/ShoppingCart-Ui/src/app/components/shared/nav/nav.component.html
+++ b/Frontend/ShoppingCart-Ui/src/app/components/shared/nav/nav.component.html
@@ -8,8 +8,23 @@
     <!-- <a class="p-2 text-dark" *ngIf="customer" [routerLink]="['/cart']">Cart</a> -->
     <a class="p-2 text-dark" *ngIf="customer"  href="cart/{{id}}">Cart</a>
      <a class="p-2 text-dark" *ngIf="merchant" [routerLink]="['/manage Stock']">Add Products</a> 
+     <a class="p-2 text-dark" *ngIf="deliveryAgent" href="delivery" >Deliveries</a> 
   </nav>
   <a class="btn btn-primary" *ngIf="!loggedIn" [routerLink]="['/register']">Sign up</a>
   <a class="btn btn-outline-secondary" *ngIf="!loggedIn" [routerLink]="['/login']">Login</a>
   <a class="btn btn-outline-secondary" *ngIf="loggedIn" (click)="logout()">SignOut</a>
+
+  <!-- <div class="row">
+    <div class="col">
+      <div ngbDropdown class="d-inline-block">
+        <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Toggle dropdown</button>
+        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+          <a class="p-2 text-dark" *ngIf="customer"  href="cart/{{id}}">Cart</a>
+          <button ngbDropdownItem>Another Action</button>
+          <button ngbDropdownItem>Something else is here</button>
+        </div>
+      </div>
+    </div> -->
+  
+
 </div>
