--- a/Frontend/ShoppingCart-Ui/src/app/components/purchases/purchases.component.html
+++ b/Frontend/ShoppingCart-Ui/src/app/components/purchases/purchases.component.html
@@ -19,7 +19,7 @@
    
   <thead>
      <tr>
-        <th>Order {{i+1}}</th>
+        <th>Order {{i+1}}  ({{order.orderDate}})</th>
          <th>OrderId:{{order.orderId}}</th>
          <th >TotalPrice {{order.amount}}</th>
          <th class="text-danger">{{ order.orderStatus}}</th>
