--- a/Frontend/ShoppingCart-Ui/src/app/components/login/login.component.html
+++ b/Frontend/ShoppingCart-Ui/src/app/components/login/login.component.html
@@ -10,20 +10,20 @@
         <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
           <div class="form-group">
             <label for="username">Username</label>
-            <input id="email" ngModel class="form-control" name="email" />
+            <input id="email" ngModel class="form-control" name="email"   [ngClass]="{ 'is-invalid': username.touched && username.invalid }"  #username="ngModel" [(ngModel)]="model.username" required  />
             <span class="invalid-feedback">Username can't be blank.</span>
           </div>
 
           <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" ngModel id="password" name="password" class="form-control"/>
+            <input type="password" ngModel id="password" name="password" class="form-control" [ngClass]="{ 'is-invalid': password.touched && password.invalid }" #password="ngModel" [(ngModel)]="model.password" required/>
             <span class="invalid-feedback">Password can't be blank.</span>
           </div>
 
-          <!-- <div class="form-group">
+          <div class="form-group">
             <input type="checkbox" id="remember" name="remember" #remember="ngModel" [(ngModel)]="model.remember">
             <label class="ml-1" for="remember">Remember Me</label>
-          </div> -->
+          </div>
 
           <button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">Login</button>
         </form>
