--- a/Frontend/ShoppingCart-Ui/src/app/components/register/merchant/merchant.component.html
+++ b/Frontend/ShoppingCart-Ui/src/app/components/register/merchant/merchant.component.html
@@ -17,28 +17,28 @@
                             <form  #addForm="ngForm" (ngSubmit)="addNewMerchant(addForm)">
                                 <div class="form-group">
                                     <label>Name</label>
-                                    <input style="font-size: 1rem;" class="form-control form-control-lg" ngModel type="text" name="fullName" placeholder="Enter your name">
+                                    <input style="font-size: 1rem;" class="form-control " required ngModel type="text" name="fullName" placeholder="Enter your name">
                                 </div>
                                 
                                 <div class="form-group">
                                     <label>Email</label>
-                                    <input style="font-size: 1rem;" class="form-control form-control-lg" ngModel type="email" name="email" placeholder="Enter your email">
+                                    <input style="font-size: 1rem;" class="form-control "  required ngModel type="email" name="email" placeholder="Enter your email">
                                 </div>
                                 <div class="form-group">
                                     <label>Password</label>
-                                    <input style="font-size: 1rem;" class="form-control form-control-lg" ngModel type="password" name="password" placeholder="Enter password">
+                                    <input style="font-size: 1rem;" class="form-control "  required ngModel type="password" name="password" placeholder="Enter password">
                                 </div>
                                 <div class="form-group">
                                     <label>ImageUrl</label>
-                                    <input style="font-size: 1rem;" class="form-control form-control-lg" ngModel type="text" name="imageUrl" placeholder="Enter your image Url">
+                                    <input style="font-size: 1rem;" class="form-control " required ngModel type="text" name="imageUrl" placeholder="Enter your image Url">
                                 </div>
                                 <div class="form-group">
                                     <label>Phone</label>
-                                    <input style="font-size: 1rem;" class="form-control form-control-lg" type="int"ngModel  name="mobileNo" placeholder="Enter your mobile number">
+                                    <input style="font-size: 1rem;" class="form-control " required type="int"ngModel  name="mobileNo" placeholder="Enter your mobile number">
                                 </div>
                                 <div class="form-group">
                                     <label>Date Of Birth</label>
-                                    <input style="font-size: 1rem;" class="form-control form-control-lg" type="date" ngModel name="dob" placeholder="Enter your image Url">
+                                    <input style="font-size: 1rem;" class="form-control " required type="date" ngModel name="dob" placeholder="Enter your image Url">
                                 </div>
                                 <div class="form-group">
                                     <label>Gender</label><br>
@@ -51,7 +51,7 @@
 
                                 <div class="text-center mt-3">
                                     <!-- <a href="index.html" class="btn btn-lg btn-primary">Sign up</a> -->
-                                    <button type="submit" class="btn btn-lg btn-primary">Sign up</button> 
+                                    <button type="submit" [disabled]="addForm.invalid" class="btn  btn-primary">Sign up</button> 
                                 </div>
                             </form>
                         </div>
