--- a/Frontend/ShoppingCart-Ui/src/app/components/shopping-cart/get-product/get-product.component.html
+++ b/Frontend/ShoppingCart-Ui/src/app/components/shopping-cart/get-product/get-product.component.html
@@ -1,7 +1,16 @@
 <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <br>
+    <br>
+
+     <div class="container h-50">
+        <div class="row h-100">
+            <div class="col-sm-3 col-md-4 col-lg-4  mx-auto d-table h-100">
+                <div class="d-table-cell align-middle">
+                    <div class="card">
+     <div class="card-body"> 
+
     <div class="container bootdey">
-<div class="col-md-12">
+<div class="col-md-10">
     <section class="panel">
           <div class="panel-body">
               <div class="col-md-6">
@@ -12,13 +21,16 @@
               </div>
               <br>
               <br>
+              <br>
+              <br><br>
               <div class="col-md-6">
                   <h4 class="pro-d-title">
-                      <a href="#" class="">
-                         {{product.productName}}
+                      <a  class="">
+                    <strong> ProductName: {{product.productName}}</strong>
                       </a>
                   </h4>
                   <p>
+                   <strong> Description:</strong>
                       {{product.description}}
                   </p>
                   <div class="product_meta">
@@ -35,3 +47,5 @@
       </section>
       </div>
     </div>
+
+      </div></div></div></div></div></div> 
