--- a/Frontend/ShoppingCart-Ui/src/app/components/shopping-cart/product-list/product-list.component.html
+++ b/Frontend/ShoppingCart-Ui/src/app/components/shopping-cart/product-list/product-list.component.html
@@ -1,10 +1,12 @@
  <div class="container">
-  <!-- <h3 class="h3">shopping Demo-2 </h3> -->
   
  
    <form class="form-inline my-2 my-lg-0">
-    <input type="search" (ngModelChange)="searchProducts(key.value)" #key="ngModel" ngModel
+    <input style="margin-left: 75%;" type="search" (ngModelChange)="searchProducts(key.value)" #key="ngModel" ngModel
      name="key" id="searchName" class="form-control mr-sm-2" placeholder="Search products..." required>
+      <span class="input-group-text border-0" id="search-addon"> 
+        <i class="fas fa-search"></i>
+      </span> 
  </form> 
  <br>
  <br>
@@ -18,7 +20,7 @@
                     <img class="pic-2" src="{{product.image1}} ">
                 </a>
                 <ul class="social">
-                    <li><a href="product/{{product.productName}}"     data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
+                   <li> <a  href="product/{{product.productName}}"     data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
                    
                     <li><a href="cart/{{Cid}}" (click)="AddProductToCart(product.productId)" *ngIf="!merchant"  data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     <li><a  (click)="RemoveProduct(product.productId)"  *ngIf="merchant"  data-tip="Delete"><i class="fa fa-trash"></i></a></li>
@@ -27,8 +29,8 @@
                 <a class="add-to-cart"   *ngIf="merchant"  href="updateProduct/{{product.productId}}">Update</a>
             </div>
               <div class="product-content">
-                  <h3 class="title"><a href="#">{{product?.productName}}</a></h3>
-                  <span class="price">{{product?.price}}</span>
+                  <h3 class="title"><a href="#"> <strong>{{product?.productName}}</strong></a></h3>
+                  <span class="price"> ₹ {{product?.price}}</span>
                   <hr class="new5">
               </div>
 
