--- a/Frontend/ShoppingCart-Ui/src/app/components/shared/footer/footer.component.html
+++ b/Frontend/ShoppingCart-Ui/src/app/components/shared/footer/footer.component.html
@@ -8,11 +8,11 @@
             <div class="single-footer-widget section_padding_0_130">
               <!-- Footer Logo-->
               <div class="footer-logo mb-3"></div>
-              <p>Appland is completely creative, lightweight, clean app landing page.</p>
+              <p>Happy shopping,we ensure you  to give the best quality products </p>
               <!-- Copywrite Text-->
-              <div class="copywrite-text mb-5">
+              <!-- <div class="copywrite-text mb-5">
                 <p class="mb-0">Made with <i class="lni-heart mr-1"></i>by<a class="ml-1" href="https://wrapbootstrap.com/user/DesigningWorld">Designing World</a></p>
-              </div>
+              </div> -->
               <!-- Footer Social Area-->
               <div class="footer_social_area"><a href="#" data-toggle="tooltip" data-placement="top" title="" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-placement="top" title="" data-original-title="Pinterest"><i class="fa fa-pinterest"></i></a><a href="#" data-toggle="tooltip" data-placement="top" title="" data-original-title="Skype"><i class="fa fa-skype"></i></a><a href="#" data-toggle="tooltip" data-placement="top" title="" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div>
             </div>
@@ -25,10 +25,10 @@
               <!-- Footer Menu-->
               <div class="footer_menu">
                 <ul>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Corporate Sale</a></li>
-                  <li><a href="#">Terms &amp; Policy</a></li>
-                  <li><a href="#">Community</a></li>
+                  <li><a >About Us</a></li>
+                  <li><a >Corporate Sale</a></li>
+                  <li><a>Terms &amp; Policy</a></li>
+                  <li><a >Community</a></li>
                 </ul>
               </div>
             </div>
@@ -41,11 +41,11 @@
               <!-- Footer Menu-->
               <div class="footer_menu">
                 <ul>
-                  <li><a href="#">Help</a></li>
-                  <li><a href="#">Support</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
-                  <li><a href="#">Term &amp; Conditions</a></li>
-                  <li><a href="#">Help &amp; Support</a></li>
+                  <li><a >Help</a></li>
+                  <li><a >Support</a></li>
+                  <li><a >Privacy Policy</a></li>
+                  <li><a>Term &amp; Conditions</a></li>
+                  <li><a >Help &amp; Support</a></li>
                 </ul>
               </div>
             </div>
@@ -58,10 +58,10 @@
               <!-- Footer Menu-->
               <div class="footer_menu">
                 <ul>
-                  <li><a href="#">Call Centre</a></li>
-                  <li><a href="#">Email Us</a></li>
-                  <li><a href="#">Term &amp; Conditions</a></li>
-                  <li><a href="#">Help Center</a></li>
+                  <li><a>Call Centre</a></li>
+                  <li><a >Email Us</a></li>
+                  <li><a >Term &amp; Conditions</a></li>
+                  <li><a >Help Center</a></li>
                 </ul>
               </div>
             </div>
