--- a/Frontend/ShoppingCart-Ui/src/app/components/shared/nav/nav.component.html
+++ b/Frontend/ShoppingCart-Ui/src/app/components/shared/nav/nav.component.html
@@ -3,16 +3,11 @@
     <app-header></app-header>
   </h5>
   <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2 text-dark" [routerLink]="['/shop']">Shop</a>
+    <a class="p-2 text-dark" [routerLink]="['/shop']">Home</a>
     <a class="p-2 text-dark" href="#">Support</a>
-    <!-- <a class="p-2 text-dark" *ngIf="customer" [routerLink]="['/cart']">Cart</a> -->
-    <!-- <a class="p-2 text-dark" *ngIf="customer"  href="cart/{{id}}">Cart</a>
-     <a class="p-2 text-dark" *ngIf="merchant" [routerLink]="['/manageStock']">Add Products</a> 
-     <a class="p-2 text-dark" *ngIf="deliveryAgent" href="delivery" >Deliveries</a>  -->
+  
    </nav> 
-  <!-- <a class="btn btn-primary" *ngIf="!loggedIn" [routerLink]="['/register']">Sign up</a> -->
-  <!-- <a class="btn btn-outline-secondary" *ngIf="!loggedIn" [routerLink]="['/login']">Login</a> -->
-  <!-- <a class="btn btn-outline-secondary" *ngIf="loggedIn" (click)="logout()">SignOut</a> -->
+  
 
   <div class="row">
     <div class="col">
@@ -20,6 +15,7 @@
         <button class="btn btn-primary" id="dropdownBasic1" ngbDropdownToggle>Menu</button>
         <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
           <a  ngbDropdownItem *ngIf="!loggedIn" [routerLink]="['/register']">Signup</a>
+          <a ngbDropdownItem *ngIf="loggedIn"   href="profile/{{id}}" >Profile</a>
           <a ngbDropdownItem *ngIf="customer"  href="cart/{{id}}">Cart</a>
           <a ngbDropdownItem *ngIf="customer"  href="orders/{{id}}">Orders</a>
           <a ngbDropdownItem *ngIf="!loggedIn" [routerLink]="['/login']">Login</a>
